--- a/src/app/setting/setting.css
+++ b/src/app/setting/setting.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 1em;
-    margin: 2em auto 6em;
+    margin: 2em auto;
     padding: 1.2em;
     background-color: var(--sub-bg);
     border: var(--text) 2px dashed;
