--- a/src/app/result-area/result-area.css
+++ b/src/app/result-area/result-area.css
@@ -1,11 +1,11 @@
-#result-area {
+.result-area {
     position: relative;
     padding: 0 2em;
     min-height: 8em;
     border-radius: 16px;
 }
 
-#result-area>canvas {
+.result-area>canvas {
     border-radius: inherit;
     width: max(100%, 8em);
     max-width: 32em;
