--- a/src/app/app.css
+++ b/src/app/app.css
@@ -1,16 +1,22 @@
-#app {
+.petpet-app {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
+    align-items: flex-start;
     text-align: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
-#app>div{
+.petpet-app > div {
+    margin: 0 1em;
+}
+
+.petpet-app > div > div {
     padding: 0 0 0.8em;
     border-top: var(--sub-bg) 2px dashed;
     position: relative;
 }
 
-#app h3 {
+.petpet-app h3 {
     color: var(--text);
 }
