--- a/src/app/app.css
+++ b/src/app/app.css
@@ -15,6 +15,7 @@
     padding: 0 0 0.8em;
     border-top: var(--sub-bg) 2px dashed;
     position: relative;
+    width: min(80vw,24em);
 }
 
 .petpet-app h3 {
