--- a/src/app/template-selector/template-selector.css
+++ b/src/app/template-selector/template-selector.css
@@ -2,7 +2,7 @@
     cursor: pointer;
 
     position: relative;
-    width: min(50vw, 24em);
+    /*width: calc(min(50vw, 24em) + 8em);*/
     padding: 2em 4em;
     border: var(--text) 2px dashed;
     border-radius: 16px;
