--- a/src/app/uploader/uploader.css
+++ b/src/app/uploader/uploader.css
@@ -1,6 +1,6 @@
 .avatar-uploader {
     position: relative;
-    width: calc(min(50vw, 24em) + 6em);
+    /*width: calc(min(50vw, 24em) + 6em);*/
     padding: 1em;
     border: var(--text) 2px dashed;
     border-radius: 16px;
