--- a/src/app/template-selector/modal-selector.css
+++ b/src/app/template-selector/modal-selector.css
@@ -35,8 +35,13 @@
 }
 
 .modal-select>.index-list div:hover {
+    z-index: 150;
     background: hsla(0, 0%, 80%, .14);
     transform: scale(1.3);
+}
+
+.modal-select.medium>.index-list div:hover {
+    transform: scale(1.4);
 }
 
 .modal-select>.index-list>div {
@@ -70,6 +75,54 @@
     background-size: 20px 20px;
     border: 4px var(--text) solid;
     border-radius: 8px;
+}
+
+.modal-select.medium>.index-list>div>img {
+    max-width: 12em;
+    max-height: 10em;
+}
+
+.modal-select.medium>.index-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    align-content: flex-start;
+}
+
+.modal-select.small>.index-list>div>img {
+    max-width: 6em;
+    max-height: 4em;
+}
+
+.modal-select.small>.index-list {
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: flex-start;
+}
+
+.modal-select.small>.index-list>div {
+    flex-direction: row;
+}
+
+.modal-select.small>.index-list div {
+    width: 100%;
+    margin-top: 1.2em;
+    justify-content: center;
+}
+
+.modal-select.small>.index-list>div>h3 {
+    margin-left: 1em;
+    font-size: 1.8em;
+    letter-spacing: 0;
+    font-weight: 600;
+    transition: letter-spacing 0.2s,
+                font-weight 0.2s
+}
+
+.modal-select.small>.index-list>div:hover>h3 {
+    font-weight: 400;
+    letter-spacing: 2px;
 }
 
 .modal-select>.index-list p {
