--- a/src/app/uploader/uploader.css
+++ b/src/app/uploader/uploader.css
@@ -1,6 +1,7 @@
 .avatar-uploader {
     position: relative;
-    /*width: calc(min(50vw, 24em) + 6em);*/
+    cursor: no-drop;
+
     padding: 1em;
     border: var(--text) 2px dashed;
     border-radius: 16px;
