--- a/src/app/template-selector/modal-selector.css
+++ b/src/app/template-selector/modal-selector.css
@@ -15,7 +15,7 @@
     z-index: 100;
 }
 
-.modal-select>.index-list {
+.modal-select > .index-list {
     height: calc(100% - 40px);
     display: flex;
     flex-direction: column;
@@ -23,7 +23,7 @@
     overflow-x: hidden;
 }
 
-.modal-select>.index-list div {
+.modal-select > .index-list div {
     padding: 0.6em;
     color: var(--text);
     font-size: 0.8rem;
@@ -34,36 +34,37 @@
     transition: all 0.3s;
 }
 
-.modal-select>.index-list div:hover {
+.modal-select > .index-list div:hover {
     z-index: 150;
     background: hsla(0, 0%, 80%, .14);
     transform: scale(1.3);
 }
 
-.modal-select.medium>.index-list div:hover {
+.modal-select.medium > .index-list div:hover {
     transform: scale(1.4);
 }
 
-.modal-select>.index-list>div {
+.modal-select > .index-list > div {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.modal-select>.index-list>div>h3 {
+.modal-select > .index-list > div > h3 {
     margin: 0.2em 0;
 }
-.modal-select>.index-list>div>h3>span {
+
+.modal-select > .index-list > div > h3 > span {
     margin-left: 0.4em;
     font-size: 0.6em;
     transition: margin-left 0.4s;
 }
 
-.modal-select>.index-list>div:hover>h3>span {
+.modal-select > .index-list > div:hover > h3 > span {
     margin-left: 0.8em;
 }
 
-.modal-select>.index-list>div>img {
+.modal-select > .index-list > div > img {
     max-width: 20em;
     max-height: 18em;
     object-fit: contain;
@@ -77,12 +78,12 @@
     border-radius: 8px;
 }
 
-.modal-select.medium>.index-list>div>img {
+.modal-select.medium > .index-list > div > img {
     max-width: 12em;
     max-height: 10em;
 }
 
-.modal-select.medium>.index-list {
+.modal-select.medium > .index-list {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -90,47 +91,47 @@
     align-content: flex-start;
 }
 
-.modal-select.small>.index-list>div>img {
+.modal-select.small > .index-list > div > img {
     max-width: 6em;
     max-height: 4em;
 }
 
-.modal-select.small>.index-list {
+.modal-select.small > .index-list {
     flex-direction: column;
     flex-wrap: nowrap;
     align-items: flex-start;
 }
 
-.modal-select.small>.index-list>div {
+.modal-select.small > .index-list > div {
     flex-direction: row;
 }
 
-.modal-select.small>.index-list div {
+.modal-select.small > .index-list div {
     width: 100%;
     margin-top: 1.2em;
     justify-content: center;
 }
 
-.modal-select.small>.index-list>div>h3 {
+.modal-select.small > .index-list > div > h3 {
     margin-left: 1em;
     font-size: 1.8em;
     letter-spacing: 0;
     font-weight: 600;
     transition: letter-spacing 0.2s,
-                font-weight 0.2s
+    font-weight 0.2s
 }
 
-.modal-select.small>.index-list>div:hover>h3 {
+.modal-select.small > .index-list > div:hover > h3 {
     font-weight: 400;
     letter-spacing: 2px;
 }
 
-.modal-select>.index-list p {
+.modal-select > .index-list p {
     text-align: center;
     font-weight: 600;
 }
 
-.modal-select>input {
+.modal-select > input {
     font-size: 1.4em;
     font-weight: bolder;
     height: 1.2em;
@@ -142,8 +143,22 @@
     /*box-shadow: #999 5px 5px 10px;*/
 }
 
+.tag,
+.index-list span {
+    display: inline-block;
+    margin-top: 0.2em;
+    margin-right: 0.6em;
+    margin-left: 0.1em;
+    padding: 5px 10px;
+    border-radius: 3px;
+    color: var(--sub-text);
+    background-color: var(--card-bg);
+    font-size: 14px;
+    font-weight: 700;
+}
+
 @media (max-width: 650px) {
-    .modal-select>.index-list div {
+    .modal-select > .index-list div {
         min-width: max-content;
         padding: 0.8em 0.2em;
         margin: 0.6em 0.2em;
