--- a/editor/app/app.css
+++ b/editor/app/app.css
@@ -73,6 +73,7 @@ select option:checked {
 }
 
 .button-group > div,
+.button-group > button,
 .button-group-item {
     height: 2em;
     padding: 0 1em;
@@ -86,16 +87,19 @@ select option:checked {
     width: 100%;
     background-color: var(--hl-text);
     white-space: nowrap;
+    border: 0;
 
     transition: all 0.6s;
 }
 
 .button-group > div:focus,
+.button-group > button:focus,
 .button-group-item:focus {
     background: hsla(0, 0%, 80%, .14);
 }
 
 .button-group > div:hover,
+.button-group > button:hover,
 .button-group-item:hover {
     color: var(--text-hover);
     box-shadow: rgba(0, 0, 0, 0.07) 0 1px 2px, rgba(0, 0, 0, 0.07) 0 2px 4px, rgba(0, 0, 0, 0.07) 0 4px 8px, rgba(0, 0, 0, 0.07) 0 8px 16px, rgba(0, 0, 0, 0.07) 0 16px 32px, rgba(0, 0, 0, 0.07) 0 32px 64px;
