--- a/editor/template-uploader/loginDialog.css
+++ b/editor/template-uploader/loginDialog.css
@@ -1,37 +1,15 @@
 @import "../app/app.css";
 
-dialog.confirm-dialog[open] {
-    display: flex;
-    flex-direction: column;
-    padding: 0;
-    width: calc(min(50vw, 24em) + 8em);
-    height: 30%;
-    align-items: stretch;
+dialog.readme[open] {
     border-radius: 16px;
     border: none;
-}
-
-dialog > .dialog-wrap {
+    padding: 1em;
+    width: calc(min(50vw,24em) + 8em);
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--bg);
+    align-items: stretch;
 }
 
-.dialog-header {
+dialog.readme a {
     color: var(--hl-text);
-
-}
-
-.dialog-button {
-    width: 25%;
-    height: 15%;
-    margin-bottom: 2%;
-    background-color: var(--card-bg);
-    border: 0;
-    border-radius: 4px;
-    cursor: pointer;
 }
