feat(Text): dpiScale = 1

--- a/src/app/uploader/avatar-cropper.css
+++ b/src/app/uploader/avatar-cropper.css
@@ -1,6 +1,5 @@
 .avatar-cropper {
-    min-width: min(80vw, 20em);
-    max-height: 80vh;
+    max-width: min(80vw, 24em);
     position: fixed;
     top: 50%;
     left: 50%;
